Resolve a group of files with one written reason, and say so on every one
Thirty re-scanned variants with no source record took thirty trips through the
inspector: click a row, scroll past three stacked forms, type the same source
and licence, click the next row, and start again on the next page because the
search box only filters the loaded 100. This adds group review to the Evidence
workspace, and the interesting part is everything it refuses to do.

The groups are the gate. GET /api/v1/scan-runs/{id}/review-groups runs the
preview() extraction the gate check already added and buckets the violations by
code, so the panel and the gate cannot disagree about which rows are standing.
There is no second copy of ReleaseGate's predicates anywhere, and a JUnit test
downloads a release's manifest bytes and runs a plain ReleaseGate.evaluate over
them to assert the groups equal that evaluation code-for-code and path-for-path.

What can be batched is short and enforced on the write. APPROVED and BLOCKED are
absent from the panel — not disabled, absent, with one line saying a per-file
call belongs on the file — and POST /batch-decisions answers 400 to either
whatever the client did, because a disabled button is bypassable by a stale tab.
EXCLUDED is offered only where the standing problem is a missing source record;
on a flagged or ownership-lead group it is the closest thing here to making
findings go away in one click, so those groups get NEEDS_REVIEW alone, which
clears nothing at the gate by construction. A BLOCKED_DECISION group renders
with no batchable action at all: those files already carry a person's "no".

Nothing is ever pre-checked. The filters — common folder, file type, SHA-256
identical to another file in the group — are computed facts that narrow the list
and never tick a box, because which files belong together is a claim the person
makes, in a mandatory sentence, including for a shared source declaration where
the source/licence pair is the declaration but "